rerun train split build code

--- a/code/02-build/01-train-validation-test-split.ipynb
+++ b/code/02-build/01-train-validation-test-split.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  For Jack Collom\\n10 Things I do Every Day\\n\\np...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "Index(['Unnamed: 0', 'Author', 'Title', 'Poetry Foundation ID', 'Content'], dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "4  For Jack Collom\\n10 Things I do Every Day\\n\\np...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "(15652, 4)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,74 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author</th>\n",
-       "      <th>author_poem_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>Alfred, Lord Tennyson</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>Algernon Charles Swinburne</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>Alice Notley</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273</th>\n",
-       "      <td>Ben Jonson</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>302</th>\n",
-       "      <td>Billy Collins</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                         author  author_poem_count\n",
-       "79        Alfred, Lord Tennyson                 78\n",
-       "80   Algernon Charles Swinburne                 39\n",
-       "90                 Alice Notley                 30\n",
-       "273                  Ben Jonson                 34\n",
-       "302               Billy Collins                 32"
+       "(39, 2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,12 +355,12 @@
     "    .loc[lambda x:x.author_poem_count >= 30,:]\\\n",
     "    .loc[lambda x:x.author != \"Anonymous\",:]\n",
     "\n",
-    "count_by_authors.head()"
+    "count_by_authors.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -452,72 +394,72 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Sir Philip Sidney</td>\n",
-       "      <td>Astrophil and Stella 90:\\n  \\n   Stella, think...</td>\n",
-       "      <td>50083</td>\n",
-       "      <td>Stella, think not that I by verse seek fame,\\n...</td>\n",
-       "      <td>39</td>\n",
+       "      <td>Percy sshe Shelley</td>\n",
+       "      <td>from\\n  \\n  Queen Mab: Part VI</td>\n",
+       "      <td>45137</td>\n",
+       "      <td>(excerpt)\\n\"Throughout these infinite orbs of ...</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Billy Collins</td>\n",
-       "      <td>The Invention of the Saxophone</td>\n",
-       "      <td>148012</td>\n",
-       "      <td>It was Adolphe Sax, remember,\\nnot Saxo Gramma...</td>\n",
-       "      <td>32</td>\n",
+       "      <td>Thomas Hardy</td>\n",
+       "      <td>'According to the Mighty Working'</td>\n",
+       "      <td>57342</td>\n",
+       "      <td>I\\n\\nWhen moiling seems at cease\\nIn the vague...</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>John Milton</td>\n",
-       "      <td>L'Allegro</td>\n",
-       "      <td>44731</td>\n",
-       "      <td>Hence loathed Melancholy,\\nOf Cerberus, and bl...</td>\n",
-       "      <td>34</td>\n",
+       "      <td>Rae Armantrout</td>\n",
+       "      <td>Our Nature</td>\n",
+       "      <td>54881</td>\n",
+       "      <td>The very flatness\\nof portraits\\nmakes for nos...</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Dean Young</td>\n",
-       "      <td>Bronzed</td>\n",
-       "      <td>12564</td>\n",
-       "      <td>That dusty bubble gum, once ubiquitous as star...</td>\n",
-       "      <td>37</td>\n",
+       "      <td>Walt Whitman</td>\n",
+       "      <td>For You O Democracy</td>\n",
+       "      <td>51567</td>\n",
+       "      <td>Come, I will make the continent indissoluble,\\...</td>\n",
+       "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>John Ashbery</td>\n",
-       "      <td>The Tennis Court Oath</td>\n",
-       "      <td>47767</td>\n",
-       "      <td>What had you been thinking about\\nthe face stu...</td>\n",
-       "      <td>46</td>\n",
+       "      <td>William Butler Yeats</td>\n",
+       "      <td>The Magi</td>\n",
+       "      <td>12892</td>\n",
+       "      <td>Now as at all times I can see in the mind's ey...</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              author                                              title  \\\n",
-       "0  Sir Philip Sidney  Astrophil and Stella 90:\\n  \\n   Stella, think...   \n",
-       "1      Billy Collins                     The Invention of the Saxophone   \n",
-       "2        John Milton                                          L'Allegro   \n",
-       "3         Dean Young                                            Bronzed   \n",
-       "4       John Ashbery                              The Tennis Court Oath   \n",
+       "                 author                              title  \\\n",
+       "0    Percy sshe Shelley     from\\n  \\n  Queen Mab: Part VI   \n",
+       "1          Thomas Hardy  'According to the Mighty Working'   \n",
+       "2        Rae Armantrout                         Our Nature   \n",
+       "3          Walt Whitman                For You O Democracy   \n",
+       "4  William Butler Yeats                           The Magi   \n",
        "\n",
        "   poetry_foundation_id                                            content  \\\n",
-       "0                 50083  Stella, think not that I by verse seek fame,\\n...   \n",
-       "1                148012  It was Adolphe Sax, remember,\\nnot Saxo Gramma...   \n",
-       "2                 44731  Hence loathed Melancholy,\\nOf Cerberus, and bl...   \n",
-       "3                 12564  That dusty bubble gum, once ubiquitous as star...   \n",
-       "4                 47767  What had you been thinking about\\nthe face stu...   \n",
+       "0                 45137  (excerpt)\\n\"Throughout these infinite orbs of ...   \n",
+       "1                 57342  I\\n\\nWhen moiling seems at cease\\nIn the vague...   \n",
+       "2                 54881  The very flatness\\nof portraits\\nmakes for nos...   \n",
+       "3                 51567  Come, I will make the continent indissoluble,\\...   \n",
+       "4                 12892  Now as at all times I can see in the mind's ey...   \n",
        "\n",
        "   author_poem_count  \n",
-       "0                 39  \n",
-       "1                 32  \n",
-       "2                 34  \n",
-       "3                 37  \n",
-       "4                 46  "
+       "0                 43  \n",
+       "1                 38  \n",
+       "2                 62  \n",
+       "3                 41  \n",
+       "4                 47  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -601,26 +543,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "def save_datasets(df_dict, save_folder):\n",
     "    for i in df_dict:\n",
     "        try:\n",
-    "            df_dict[i].to_csv(save_folder + \"/\" + i + \".csv\", index = False)\n",
+    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)\n",
     "        except FileNotFoundError:\n",
     "            os.mkdir(save_folder)\n",
-    "            df_dict[i].to_csv(save_folder + \"/\" + i + \".csv\", index = False)"
+    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dataset({'train':}, save_folder = processed_root(\"02-train-validation-test-split\"))"
+    "save_datasets({'train_data.csv':train_data,\n",
+    "              'val_data.csv':val_data,\n",
+    "              'test_data.csv':test_data}, \n",
+    "             save_folder = processed_root(\"02-train-validation-test-split\"))"
    ]
   }
  ],
