added baseline decision tree model

--- a/code/02-build/01-train-validation-test-split.ipynb
+++ b/code/02-build/01-train-validation-test-split.ipynb
@@ -514,35 +514,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test(**kwargs):\n",
-    "    for i in kwargs:\n",
-    "        print(i, kwargs[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello bye\n",
-      "whee whoo\n"
-     ]
-    }
-   ],
-   "source": [
-    "test(hello='bye', whee = 'whoo')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [],
@@ -596,7 +567,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "230.4px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
