--- a/code/02-build/02-generate-bow.ipynb
+++ b/code/02-build/02-generate-bow.ipynb
@@ -366,15 +366,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    data.to_csv(processed_root(\"01-poetryfoundation/poetry_foundation.csv\"), index = False)\n",
-    "except FileNotFoundError:\n",
-    "    os.mkdir(processed_root(\"01-poetryfoundation\"))\n",
-    "    data.to_csv(processed_root(\"01-poetryfoundation/poetry_foundation.csv\"), index = False)"
+    "def save_datasets(df_dict, save_folder):\n",
+    "    for i in df_dict:\n",
+    "        try:\n",
+    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)\n",
+    "        except FileNotFoundError:\n",
+    "            os.mkdir(save_folder)\n",
+    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs_to_save = {'bow_train_data.csv':bag_train_data,\n",
+    "               'bow_val_data.csv':bag_val_data,\n",
+    "               'bow_test_data.csv':bag_test_data}\n",
+    "\n",
+    "save_datasets(dfs_to_save, save_folder = processed_root(\"03-bag-of-words\"))"
    ]
   }
  ],
