--- a/code/03-notebooks/01-baseline-decision-tree-bow.ipynb
+++ b/code/03-notebooks/01-baseline-decision-tree-bow.ipynb
@@ -121,18 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "incomplete format",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-0e1f475cc59a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my_pred_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtrain_accuracy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_pred_train\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Training Accuracy: %.2f\\%\"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_accuracy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Validation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: incomplete format"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 28.50%\n",
+      "Validation Accuracy: 17.03%\n"
      ]
     }
    ],
@@ -140,12 +137,12 @@
     "# Training\n",
     "y_pred_train = dt.predict(X_train)\n",
     "train_accuracy = np.mean(y_pred_train == y_train) * 100\n",
-    "print(\"Training Accuracy: %.2f\\%\"%(train_accuracy))\n",
+    "print(\"Training Accuracy: %.2f%%\"%(train_accuracy))\n",
     "\n",
     "# Validation\n",
     "y_pred_val = dt.predict(X_val)\n",
     "val_accuracy = np.mean(y_pred_val == y_val) * 100\n",
-    "print(\"Validation Accuracy: %.2f\\%\"%(val_accuracy))"
+    "print(\"Validation Accuracy: %.2f%%\"%(val_accuracy))"
    ]
   }
  ],
